--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,14 +1,10 @@
 {
+	"extends": "../tsconfig.base.json",
 	"compilerOptions": {
-		"target": "es2020",
-		"lib": ["es2020"],
-		"module": "commonjs",
-		"moduleResolution": "node",
-		"sourceMap": true,
-		"strict": true,
+		"composite": true,
 		"outDir": "out",
-		"rootDir": "src"
+		"rootDir": "..",
 	},
-	"include": ["src"],
+	"include": ["src/**/*.ts", "../shared", "index.ts"],
 	"exclude": ["node_modules", ".vscode-test"]
 }
