--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,14 @@
 {
 	"compilerOptions": {
 		"module": "commonjs",
-		"target": "es2020",
-		"lib": ["es2020"],
-		"outDir": "out",
-		"rootDir": "src",
-		"sourceMap": true
+		"target": "ESNext",
+		"lib": ["ESNext"],
+		"outDir": "dist",
+		"rootDir": "./",
+		"sourceMap": true,
+		"noEmit": true
 	},
-	"include": [
-		"src"
-	],
+	"include": ["*.ts"],
 	"exclude": [
 		"node_modules",
 		".vscode-test"
