feat(console): write utility to handle errors, warns and messages;
Add handler for failed fetch request for config and css file;

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
 		"sourceMap": true,
 		"noEmit": true
 	},
-	"include": ["*.ts"],
+	"include": ["*.ts", "shared/env.d.ts"],
 	"exclude": [
 		"node_modules",
 		".vscode-test"
