chore(package_json): commit only package* files;

--- a/client/package.json
+++ b/client/package.json
@@ -1,23 +1,23 @@
 {
-	"name": "css-lsp-client",
-	"description": "Client implementation",
-	"author": "cbrgpl",
-	"license": "MIT",
-	"version": "0.0.1",
-	"publisher": "vscode",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/cbrgpl/lsp.git"
-	},
-	"engines": {
-		"vscode": "^1.75.0"
-	},
-	"dependencies": {
-		"glob": "^11.0.0",
-		"vscode-languageclient": "^9.0.1"
-	},
-	"devDependencies": {
-		"@types/vscode": "^1.75.1",
-		"@vscode/test-electron": "^2.3.9"
-	}
+  "name": "varsu-client",
+  "description": "Client implementation of VarSu",
+  "author": "cbrgpl",
+  "license": "MIT",
+  "version": "1.0.0",
+  "publisher": "cbrgpl",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:cbrgpl/varsu.git"
+  },
+  "engines": {
+    "vscode": "^1.75.0"
+  },
+  "dependencies": {
+    "glob": "^11.0.0",
+    "vscode-languageclient": "^9.0.1"
+  },
+  "devDependencies": {
+    "@types/vscode": "^1.75.1",
+    "@vscode/test-electron": "^2.3.9"
+  }
 }
