feat(logging): improve logging for dev and prod;
close #23;

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,8 @@
 			"preLaunchTask": "on-debugging",
 			"postDebugTask": "on-debugging-terminate",
 			"env": {
-        "VSCODE_DEBUG_MODE": "true"
+        "VSCODE_DEBUG_MODE": "true",
+				"VSCODE_LOG_LEVEL": "FULL"
       }
 		},
 		{
