--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,6 @@
 {
   "name": "varsu-server",
+  "type": "module",
   "description": "Server implementation of VarSu",
   "version": "1.0.0",
   "author": "cbrgpl",
@@ -13,7 +14,7 @@
     "url": "git@github.com:cbrgpl/varsu.git"
   },
   "scripts": {
-    "mock-server:start": "ts-node ./src/mocks/mock-server.ts",
+    "mock-server:start": "node --loader ts-node/esm ./src/mocks/mock-server.ts",
     "compile:watch": "tsc -b -w"
   },
   "dependencies": {
