--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,7 +3,7 @@
 	"compilerOptions": {
 		"composite": true,
 		"outDir": "out",
-		"rootDir": "..",
+		"rootDir": ".."
 	},
 	"include": ["src/**/*.ts", "../shared", "index.ts"],
 	"exclude": ["node_modules", ".vscode-test"]
