--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,9 +1,9 @@
 {
 	"compilerOptions": {
-		"target": "ESNext",
+		"target": "esnext",
 		"lib": ["ESNext"],
-		"module": "commonjs",
-		"moduleResolution": "node",
+		"module": "nodenext",
+		"moduleResolution": "nodenext",
 		"sourceMap": true,
 		"strict": true,
 		"skipLibCheck": true,
