chore: fix debugging start;

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
   "name": "varsu-client",
+  "type": "module",
   "description": "Client implementation of VarSu",
   "author": "cbrgpl",
   "license": "MIT",
