fix: fix handling of variables with kebab naming;
closes #27;

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -29,7 +29,7 @@
     },
     {
       "label": "on-debugging",
-      "dependsOn": ["watch", "mock-server"],
+      "dependsOn": ["mock-server"],
       "dependsOrder": "parallel"
     },
     {
