--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "lint-staged": "^15.5.0",
     "mocha": "^10.3.0",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.29.0"
+    "typescript-eslint": "^8.29.0",
+    "vitest": "^3.2.4"
   }
 }
