--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,6 +5,6 @@
 		"outDir": "out",
 		"rootDir": ".."
 	},
-	"include": ["src/**/*.ts", "../shared", "index.ts"],
+	"include": ["src/**/*.ts", "../shared", "index.ts", "__tests__/config-manager.spec.ts"],
 	"exclude": ["node_modules", ".vscode-test"]
 }
