--- a/packages/vsc-extension/package.json
+++ b/packages/vsc-extension/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "varsu-client",
+  "name": "@varsu/vsc-extension",
   "type": "module",
   "description": "Client implementation of VarSu",
   "author": "cbrgpl",
@@ -14,7 +14,7 @@
     "vscode": "^1.75.0"
   },
   "dependencies": {
-    "shared": "../shared",
+    "@varsu/shared": "*",
     "glob": "^11.0.0",
     "vscode-languageclient": "^9.0.1"
   },
