--- a/packages/vsc-extension/tsconfig.json
+++ b/packages/vsc-extension/tsconfig.json
@@ -1,10 +1,10 @@
 {
-	"extends": "../tsconfig.base.json",
+	"extends": "../../tsconfig.base.json",
 	"compilerOptions": {
 		"composite": true,
 		"outDir": "out",
 		"rootDir": ".."
 	},
-	"include": ["src/**/*.ts", "../shared", "index.ts"],
+	"include": ["src/**/*.ts", "index.ts"],
 	"exclude": ["node_modules", ".vscode-test"]
 }
