--- a/packages/lsp-server/package.json
+++ b/packages/lsp-server/package.json
@@ -18,6 +18,7 @@
     "compile:watch": "tsc -b -w"
   },
   "dependencies": {
+    "@varsu/shared": "*",
     "css-tree": "^3.1.0",
     "vscode-languageserver": "^9.0.1",
     "vscode-languageserver-textdocument": "^1.0.11"
