--- a/packages/vsc-extension/tsconfig.json
+++ b/packages/vsc-extension/tsconfig.json
@@ -5,6 +5,9 @@
 		"outDir": "out",
 		"rootDir": ".."
 	},
+	"references": [
+		{ "path": "../shared" },
+	],
 	"include": ["src/**/*.ts", "index.ts"],
 	"exclude": ["node_modules", ".vscode-test"]
 }
